--- a/labs/HTML_CH05_LAB/image_left.html
+++ b/labs/HTML_CH05_LAB/image_left.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body>
+<body style="background: url(./images/icons8-order-64.png) repeat-y scroll left;">
+  <div id="wrapper">
   <header>
     <h1>header one</h1>
   </header>
@@ -25,5 +26,6 @@
   <footer>
     <h2>footer</h2>
   </footer>
+  </div>
 </body>
 </html>
