--- a/labs/HTML_CH09_LAB/Part 3/index.html
+++ b/labs/HTML_CH09_LAB/Part 3/index.html
@@ -7,12 +7,19 @@
   <link href="styles/site.css" type="text/css" rel="stylesheet"> 
 </head>
 <body>
+
   <div id="wrapper">
   <header class="header">
-    <img class="logo" src="images/LogoJJ 1.png" alt="JJ Logo">
-    <h1 class="name">Jonathan Bauer</h1>
-    <h2 class="title">Web Portfolio</h2>
-    <h3 class="tagline"><q>WAAAAGH!</q></h3>
+    <div class="main-header">
+      <img class="logo" src="images/LogoJJ 1.png" alt="JJ Logo">
+      <div class="header-title">
+        <div class="main-title">
+          <h1 class="name">Jonathan Bauer</h1>
+          <h1 class="title">Web Portfolio</h1>
+        </div>
+        <h3 class="tagline"><q>WAAAAGH!</q></h3>
+      </div>
+    </div>
     <nav class="navbar">
       <ul class="navbar-list">
         <li class="navbar-link"><a href="index.html">Home</a></li>
@@ -25,12 +32,22 @@
   </header>
   <main class="main">
     <section class="section-one">
-      <h2>Home</h2>
-      <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Cursus finibus nisi gravida tempor nascetur. Senectus fames litora condimentum urna lectus. Nullam orci erat vivamus sapien ad orci ornare a. Imperdiet orci senectus mi per egestas luctus praesent. In torquent vehicula nullam tristique eget donec elit. Augue libero congue integer tempus orci risus velit. Vel habitasse eu, pulvinar placerat venenatis molestie eros suscipit. Quis nulla ultricies ante potenti integer venenatis gravida sed aliquam.</p>
-      
+      <div class="home-section">
+        <h2>Home</h2>
+        <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Cursus finibus nisi gravida tempor nascetur. Senectus fames litora condimentum urna lectus. Nullam orci erat vivamus sapien ad orci ornare a. Imperdiet orci senectus mi per egestas luctus praesent. In torquent vehicula nullam tristique eget donec elit. Augue libero congue integer tempus orci risus velit. Vel habitasse eu, pulvinar placerat venenatis molestie eros suscipit. Quis nulla ultricies ante potenti integer venenatis gravida sed aliquam.</p>
+      </div>
+      <div class="education-section">
+        <h2 class="education-header">Education</h2>
+        <p class="education-para">
+          Associate of Technology<br>
+          Application &amp; Web Development<br>
+        </p>
+        <img class="ranken-logo" src="images/rankenLogo.jpeg" alt="Ranken Logo">
+        <a class="school-link" href="https://ranken.edu/">www.ranken.edu</a>
+      </div>
     </section>
     <section class="section-two">
-      <img src="images/LogoJJ 1.png" alt="...">
+      <img class="headshot" src="images/Android App icon.png" alt="...">
     </section>
   </main>
   <footer>
@@ -39,7 +56,7 @@
       Imperial, Missouri<br>
       63052<br>
       <a href="tel:+13149740921">(314)&nbsp;974&#8209;0921</a><br>
-    </address>
+    </address><br>
     <div class="copyright">&copy; Jonathan Bauer 2024</div>
   </footer>
   </div>
