--- a/homework/HTML_CH11_HW/index.html
+++ b/homework/HTML_CH11_HW/index.html
@@ -3,11 +3,81 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+   <header>
+    <div class="container">
+      <div class="">
+        <img class="ali" width="100px" src="images/ALttP_English_Logo.webp" alt="The Legend of Zelda">
+      </div>
+    </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">A Link to the Past</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Walk-Through</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+   </header>
+   <main class="d-flex flex-column flex-md-row">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-4">
+          Items wevrgwercgwerg
+        </div>
+        <div class="col-4">
+          fdsdfbsdfbsdfbsdfb
+        </div>
+        <div class="col-4">
+          bstb sercwerg wvecrg
+        </div>
+      </div>
+    </div>
+    <div id="carouselExampleFade" class="carousel slide w-lg-50" data-bs-ride="carousel">
+      <h2 class="text-center">Map</h2>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="images/lightWorldMap.jpeg" class="d-block w-100" alt="Light World Map">
+          <div class="carousel-caption d-none d-md-block bg-info text-dark">
+            <h3>Light World</h3>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/darkWorldMap.avif" class="d-block w-100" alt="Dark World Map">
+          <div class="carousel-caption d-none d-md-block bg-warning text-dark">
+            <h3>Dark World</h3>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+   </main>
+   <footer>
+    <div></div>
+   </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
