--- a/homework/HTML_CH11_HW/index.html
+++ b/homework/HTML_CH11_HW/index.html
@@ -3,81 +3,107 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>A Link to JJ's Favorite Video Game</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="styles/site.css" type="text/css" rel="stylesheet">
   </head>
-  <body>
-   <header>
-    <div class="container">
-      <div class="">
-        <img class="ali" width="100px" src="images/ALttP_English_Logo.webp" alt="The Legend of Zelda">
-      </div>
-    </div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">A Link to the Past</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <body class="bg-success">
+  <!--HEADER-->
+  <header class="bg-success d-flex flex-column">
+    <img class="header-logo my-3 align-self-center" src="images/ALttP_English_Logo_Header.png" alt="...">
+    <!--NAVBAR-->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid bg-warning">
+        <a class="navbar-brand" href="index.html"><img src="images/The_Legend_of_Zelda_A_Link_To_The_Past.png" width="30px" alt="a link tot the past cartridge"> LoZ:ALttP</a>
+        <button class="navbar-toggler bg-danger" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Walk-Through</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-          </ul>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#">Walkthrough</a>
+          </div>
         </div>
       </div>
     </nav>
-   </header>
-   <main class="d-flex flex-column flex-md-row">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-4">
-          Items wevrgwercgwerg
-        </div>
-        <div class="col-4">
-          fdsdfbsdfbsdfbsdfb
-        </div>
-        <div class="col-4">
-          bstb sercwerg wvecrg
-        </div>
-      </div>
-    </div>
-    <div id="carouselExampleFade" class="carousel slide w-lg-50" data-bs-ride="carousel">
-      <h2 class="text-center">Map</h2>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="images/lightWorldMap.jpeg" class="d-block w-100" alt="Light World Map">
-          <div class="carousel-caption d-none d-md-block bg-info text-dark">
-            <h3>Light World</h3>
+  </header>
+  <!--MAIN-->
+  <main>
+    <!--MENU-->
+    <section>
+      <div class="container text-center mt-5">
+        <div class="row">
+          <div class="col d-flex flex-column align-items-center">
+            <div class="card mx-2 my-2 bg-dark h-100" style="width: 18rem;">
+              <img src="images/ALttP_Bow_&_Arrows_Sprite.png" class="card-img-top w-50 mx-auto my-2 " alt="Bow and arrow sprite">
+              <div class="card-body text-light d-flex flex-column justify-content-between">
+                <h5 class="card-title">Items</h5>
+                <p class="card-text">Here you will find a list of all items in A Link to the Past and locations.</p>
+                <a href="#" class="btn btn-danger">Enter</a>
+              </div>
+            </div>
+          </div>
+          <div class="col d-flex flex-column align-items-center">
+            <div class="card mx-2 my-2 bg-dark h-100" style="width: 18rem;">
+              <img src="images/LostOldMan.png" class="card-img-top w-50 mx-auto my-2"  alt="Lost old man sprite">
+              <div class="card-body text-light d-flex flex-column justify-content-between">
+                <h5 class="card-title">Characters</h5>
+                <p class="card-text">"Here you will find a list of all characters in A Link to the Past and locations."</p>
+                <a href="#" class="btn btn-danger">Enter</a>
+              </div>
+            </div>
+          </div>
+          <div class="col d-flex flex-column align-items-center">
+            <div class="card mx-2 my-2 h-100 bg-dark" style="width: 18rem;">
+              <img src="images/ALttP_Big_Key_Sprite.png" class="card-img-top w-50 mx-auto my-2" alt="...">
+              <div class="card-body text-light d-flex flex-column justify-content-between">
+                <h5 class="card-title">Dungeons</h5>
+                <p class="card-text">Here you will find a guide to all Dungeons in A link to the Past and locations.</p>
+                <a href="#" class="btn btn-danger">Enter</a>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="images/darkWorldMap.avif" class="d-block w-100" alt="Dark World Map">
-          <div class="carousel-caption d-none d-md-block bg-warning text-dark">
-            <h3>Dark World</h3>
+      </div>
+    </section>
+    <!--CAROUSEL-->
+    <section id="carousel-section">
+      <div id="carousel" class="container mt-1 mb-5 flex-column align-items-center">
+        <div class="map-header text-center">
+          <h2 class="mb-2">Map</h2>
+        </div>
+        <div class="carousel w-100">
+          <div id="carouselExampleFade" class="carousel slide carousel-fade">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="images/lightWorldMap.jpeg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="images/darkWorldMap.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+    </section>
+  </main>
+  <!--FOOTER-->
+  <footer class="bg-secondary">
+    <div class="container w-100">
+      <div class="text-center text-light">
+        &copy; Jonathan Bauer 2024
+      </div>
     </div>
-   </main>
-   <footer>
-    <div></div>
-   </footer>
+  </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
