--- a/labs/HTML_CH13_LAB/index.html
+++ b/labs/HTML_CH13_LAB/index.html
@@ -22,7 +22,7 @@
       <label for="card-number">Card Number:</label>
       <input type="text" id="card-number" name="card-number">
       <label for="exp-date">Date:</label>
-      <input type="text" id="exp-date" name="expiration-date" pattern="[\d{1,2}-\d{4}" placeholder="dd\yyyy">
+      <input type="text" id="exp-date" name="expiration-date" pattern="[\d{1,2}-\d{4}" placeholder="ddyyyy">
     </fieldset>
     <!--/credit card section-->
 
