--- a/labs/HTML_FORMS_LAB/index.html
+++ b/labs/HTML_FORMS_LAB/index.html
@@ -10,24 +10,24 @@
     <fieldset>
       <legend>Contact</legend>
       <label for="first-name">First Name:</label>
-      <input type="text" id="first-name" name="first-name" required>
+      <input type="text" id="first-name" name="first-name" placeholder="First" required>
       <label for="last-name">Last Name:</label>
-      <input type="text" id="last-name" name="last-name" required><br><br>
+      <input type="text" id="last-name" name="last-name" placeholder="Last" required><br><br>
       <label for="phone-number">Phone Number:</label>
-      <input type="tel" id="phone-number" name="phone-number" required><br><br>
+      <input type="tel" id="phone-number" name="phone-number" placeholder="999-999-9999" pattern="\d{3}[\-]\d{3}[\-]\d{4}" required><br><br>
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
+      <input type="email" id="email" name="email" placeholder="example@email.com" required>
       <label for="email-confirm">Confirm Email:</label>
-      <input type="email" id="email-confirm" name="email-confirm" required><br><br>
+      <input type="email" id="email-confirm" name="email-confirm" placeholder="example@email.com" required><br><br>
       <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
+      <input type="password" id="password" name="password" placeholder="password" required>
       <label for="password-confirm">Confirm Password:</label>
-      <input type="password" id="password-confirm" name="password-confirm" required>
+      <input type="password" id="password-confirm" name="password-confirm" placeholder="password" required>
     </fieldset>
     <fieldset>
       <legend>Credit Card</legend>
       <label for="cc-num">Credit Card Number:</label>
-      <input type="text" id="cc-num" name="cc-num" required><br><br>
+      <input type="text" id="cc-num" name="cc-num" placeholder="9999-9999-9999-9999" pattern="/d{4}[\-]/d{4}[\-]/d{4}[\-]/d{4}" required><br><br>
       <label for="exp-date">Expiration Date:</label>
       <input type="text" id="exp-date" name="exp-date" required>
       <label for="csc">CSC:</label>
@@ -35,8 +35,15 @@
     </fieldset>
     <fieldset>
       <legend>Billing Address</legend>
-      <label for="street">Street Address:</label>
+      <label for="street">Street Address 1:</label>
       <input type="text" id="street" name="street"><br>
+      <label for="street2">Street Address 2:</label>
+      <input type="text" id="street2" name="street2"><br>
+      <label for="city">City:</label>
+      <input type="text" id="city" name="city"><br>
+      
+      <label for="zip">ZIP Code:</label>
+      <input type="text" name="zip" id="zip" placeholder="5 or 9 digits" pattern="^\d{5}(-\d{4})?$" title="Either 5 or 9 digits" required><br>
     </fieldset>
   </form>
 </body>
