--- a/labs/HTML_FORMS_LAB/index.html
+++ b/labs/HTML_FORMS_LAB/index.html
@@ -3,48 +3,76 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <title>HTML Forms Lab</title>
 </head>
 <body>
-  <form id="order-form" action="/order" method="post">
-    <fieldset>
+  <form id="order-form" action="/order" method="post" class="d-flex">
+    <div class="col">
+    <fieldset class="col-3 p-2">
       <legend>Contact</legend>
-      <label for="first-name">First Name:</label>
-      <input type="text" id="first-name" name="first-name" placeholder="First" required>
-      <label for="last-name">Last Name:</label>
-      <input type="text" id="last-name" name="last-name" placeholder="Last" required><br><br>
-      <label for="phone-number">Phone Number:</label>
-      <input type="tel" id="phone-number" name="phone-number" placeholder="999-999-9999" pattern="\d{3}[\-]\d{3}[\-]\d{4}" required><br><br>
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" placeholder="example@email.com" required>
-      <label for="email-confirm">Confirm Email:</label>
-      <input type="email" id="email-confirm" name="email-confirm" placeholder="example@email.com" required><br><br>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" placeholder="password" required>
-      <label for="password-confirm">Confirm Password:</label>
-      <input type="password" id="password-confirm" name="password-confirm" placeholder="password" required>
+      <label class="form-label" for="first-name">First Name:</label>
+      <input class="form-control" type="text" id="first-name" name="first-name" placeholder="First" autocomplete="given-name" required>
+      <label class="form-label" for="last-name">Last Name:</label>
+      <input class="form-control" type="text" id="last-name" name="last-name" placeholder="Last" autocomplete="family-name" required><br><br>
+      <label class="form-label" for="phone-number">Phone Number:</label>
+      <input class="form-control" type="tel" id="phone-number" name="phone-number" placeholder="999-999-9999" pattern="\d{3}[\-]\d{3}[\-]\d{4}" autocomplete="tel-national" required><br><br>
+      <label class="form-label" for="email">Email:</label>
+      <input class="form-control" type="email" id="email" name="email" placeholder="example@email.com" autocomplete="email" required>
+      <label class="form-label" for="email-confirm">Confirm Email:</label>
+      <input class="form-control" type="email" id="email-confirm" name="email-confirm" placeholder="example@email.com" autocomplete="email" required><br><br>
+      <label class="form-label" for="password">Password:</label>
+      <input class="form-control" type="password" id="password" name="password" placeholder="password" autocomplete="current-password" required>
+      <label class="form-label" for="password-confirm">Confirm Password:</label>
+      <input class="form-control" type="password" id="password-confirm" name="password-confirm" placeholder="password" autocomplete="current-password" required>
     </fieldset>
-    <fieldset>
+    <fieldset class="col-3 p-2">
       <legend>Credit Card</legend>
-      <label for="cc-num">Credit Card Number:</label>
-      <input type="text" id="cc-num" name="cc-num" placeholder="9999-9999-9999-9999" pattern="/d{4}[\-]/d{4}[\-]/d{4}[\-]/d{4}" required><br><br>
-      <label for="exp-date">Expiration Date:</label>
-      <input type="text" id="exp-date" name="exp-date" required>
-      <label for="csc">CSC:</label>
-      <input type="text" id="csc" name="csc" required><br><br>
+      <label class="form-label" for="cc-number">Credit Card Number:</label>
+      <input class="form-control" type="text" id="cc-number" name="cc-number" placeholder="9999-9999-9999-9999" pattern="/d{4}[\-]/d{4}[\-]/d{4}[\-]/d{4}" autocomplete="cc-number" required><br><br>
+      <label class="form-label" for="cc-exp">Expiration Date:</label>
+      <input class="form-control" type="text" id="cc-exp" name="cc-exp" autocomplete="cc-exp" required>
+      <label class="form-label" for="cc-csc">CSC:</label>
+      <input class="form-control" type="text" id="cc-csc" name="cc-csc" autocomplete="cc-csc" required><br><br>
     </fieldset>
-    <fieldset>
+    <fieldset class="col-3 p-2">
       <legend>Billing Address</legend>
-      <label for="street">Street Address 1:</label>
-      <input type="text" id="street" name="street"><br>
-      <label for="street2">Street Address 2:</label>
-      <input type="text" id="street2" name="street2"><br>
-      <label for="city">City:</label>
-      <input type="text" id="city" name="city"><br>
-      
-      <label for="zip">ZIP Code:</label>
-      <input type="text" name="zip" id="zip" placeholder="5 or 9 digits" pattern="^\d{5}(-\d{4})?$" title="Either 5 or 9 digits" required><br>
+      <label class="form-label" for="street">Street Address 1:</label>
+      <input class="form-control" type="text" id="street" name="street" autocomplete="address-line1 required"><br>
+      <label class="form-label" for="street2">Street Address 2:</label>
+      <input class="form-control" type="text" id="street2" name="street2" autocomplete="address-line2"><br>
+      <label class="form-label" for="city">City:</label>
+      <input class="form-control" type="text" id="city" name="city" autocomplete="address-level2"><br>
+      <label class="form-label" for="state">State:</label>
+      <select class="form-select" id="state" size="1" autocomplete="address-level1">
+          <option value="state">--</option>
+          <option value="state"">IL</option>
+          <option value="state">MO</option>
+      </select><br><br>
+      <label class="form-label" for="zip">ZIP Code:</label>
+      <input class="form-control" type="text" name="zip" id="zip" placeholder="5 or 9 digits" pattern="^\d{5}(-\d{4})?$" title="Either 5 or 9 digits" autocomplete="postal-code" required><br>
     </fieldset>
+    <fieldset class="col-3 p-2">
+      <legend>Shipping Address</legend>
+      <label class="form-label" for="ship-street">Street Address 1:</label>
+      <input class="form-control" type="text" id="ship-street" name="ship-street" autocomplete="address-line1 required"><br>
+      <label class="form-label" for="ship-street2">Street Address 2:</label>
+      <input class="form-control" type="text" id="ship-street2" name="ship-street2" autocomplete="address-line2"><br>
+      <label class="form-label" for="ship-city">City:</label>
+      <input class="form-control" type="text" id="ship-city" name="ship-city" autocomplete="address-level2"><br>
+      <label class="form-label" for="ship-state">State:</label>
+      <select class="form-select" id="ship-state" name="ship-state" size="1" autocomplete="address-level1">
+          <option value="state">--</option>
+          <option value="state"">IL</option>
+          <option value="state">MO</option>
+      </select><br><br>
+      <label class="form-label" for="ship-zip">ZIP Code:</label>
+      <input class="form-control" type="text" name="ship-zip" id="ship-zip" placeholder="5 or 9 digits" pattern="^\d{5}(-\d{4})?$" title="Either 5 or 9 digits" autocomplete="postal-code" required><br>
+      <label class="form-check-label" for="ba-same">Same as billing addrerss?</label>
+      <input class="form-check-input" type="checkbox" id="ba-same" name="ba-same">
+    </fieldset>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </div>
   </form>
 </body>
 </html>
