JS_CH02_HW finished

--- a/homework/JS_CH02_HW/index.html
+++ b/homework/JS_CH02_HW/index.html
@@ -16,29 +16,30 @@
       <input id="kicken-cheese" placeholder="QTY" type="number" name="kicken-cheese" value="" min="0"><br>
       <label for="steakwake">Steak &amp; Wake - $6.99</label>
       <input id="steakWake" placeholder="QTY" type="number" name="steakWake" value="" min="0"><br>
-      <button id="button" type="submit">Submit Order</button>
+      <button id="button" type="button">Submit Order</button>
       <p id="totalAlert"></p>
     </fieldset>
   </form>
  <script>
-/*
+//using onclick for assignment
+
     const submitButton = document.getElementById('button');
 
     submitButton.onclick = () => {
 
-      let cranSlice = document.getElementById('cran-slice').value * 4.19;
+    let cranSlice = document.getElementById('cran-slice').value * 4.19;
     let kickenCheese = document.getElementById('kicken-cheese').value * 8.39;
     let steakWake = document.getElementById('steakWake').value * 6.99;
     let total = cranSlice + kickenCheese + steakWake;
 
       document.getElementById("totalAlert").innerHTML = `Your total is: $${total.toFixed(2)}`;
     };
- */
-  
- //using addEventListen
-    const form = document.getElementById('drive-thru-form');
 
-    form.addEventListener('submit',function(event){
+/*
+ //using addEventListen 
+    const button = document.getElementById('button');
+
+    button.addEventListener('click',function(event){
       event.preventDefault(); // prevents the form from autosubmitting
 
       let cranSlice = document.getElementById('cran-slice').value * 4.19;
@@ -53,7 +54,7 @@
 //        }else 
 //         window.location.reload(); 
     });
-
+*/
   </script>
 </body>
 </html>
