--- a/tests/MIDTERM/index.html
+++ b/tests/MIDTERM/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Connecting Though Charity</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="styles/site.css" rel="stylesheet" type="text/css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
     <header>
@@ -17,23 +22,23 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="#">GALLERY</a>
+                <a class="nav-link" href="gallery.html">GALLERY</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">DONATIONS</a>
+                <a class="nav-link" href="donations.html">DONATIONS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">CONTACT</a>
+                <a class="nav-link" href="contact.html">CONTACT</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">FAQ</a>
+                <a class="nav-link" href="faq.html">FAQ</a>
               </li>
             </ul>
             <div class="nav-item">
-              <a class="nav-link bg-primary text-light p-2" href="#" >SIGN UP</a>
+              <a class="nav-link bg-primary text-light border border-primary border-2 p-2" href="signup-calendar.html" >SIGN UP</a>
             </div>
             <div class="nav-item">
-              <a class="nav-link bg-secondary p-2" href="#" >DONATE</a>
+              <a class="nav-link border border-primary border-2 p-2" href="donations.html" >DONATE</a>
             </div>
           </div>
         </div>
@@ -49,7 +54,7 @@
               <p class="hero-quote mb-4 ">Staying connected in the local community to positively impact the life of others.</p>
             </div>
             <div class="social-links text-center">
-              <a href="#" target="_blank" class="facebook">
+              <a href="https://www.facebook.com/ConnectingThroughCharity/?_rdr" target="_blank" class="facebook">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="mx-2 bi bi-facebook" viewBox="0 0 16 16">
                   <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
                 </svg>
@@ -58,15 +63,61 @@
           </div>
         </div>
       </div>
+
       <section class="mission">
         <div class="section-heading">Mission:</div>
-        <div class="section-body">Connecting Through Charity provides 
-          year-round giving to the local community to help children, families, and individuals in need overcome hardship.
+          <div class="section-body">Connecting Through Charity provides year-round giving to the local community to help children, families, and individuals in need overcome hardship.</div>
+          <div class="section-link">
+            <a class=" btn btn-primary border-2 border-primary  " href="signup-calendar.html">Join Us</a>
+            <a class="btn btn-light border-primary text-primary border-2" href="contact.html">Contact Us</a>
           </div>
       </section>
+      <section class="about-us">
+        <div class="section-heading">About Us:</div>
+      </section>
+      <section class="projects">
+        <div class="section-heading">Things we have done:</div>
+          <div class="section-body">Make Blessing Bags for the homeless, provide Christmas gifts to families in need within our local school districts, providing Easter Baskets to families for their children, we adopted a teacher and her classroom this year for the first time, we have provided the food for families to make a Thanksgiving dinner. We are continuously adding new projects.</div>
+          <div class="section-link"><a class="btn btn-primary" href="gallery.html">See what we've done</a></div>
+      </section>
     </main>
-    <footer>
 
+    <footer>
+      <div class="container text-center bg-primary">
+        <div class="row align-items-start">
+          <div class="col text-light">
+            <div class="footer-content-header">Donate</div>
+            <ul class="footer-content">
+              <li>Cash donations</li>
+              <li>Paypal</li>
+              <li>Venmo</li>
+              <li>Other</li>
+            </ul>
+          </div>
+          <div class="col text-light">
+            <div class="footer-content-header">Get in touch</div>
+            <ul class="footer-content">
+              <li>Contact us</li>
+              <li>Join us</li>
+              <li>
+                <a href="https://www.facebook.com/ConnectingThroughCharity/?_rdr" target="_blank" class="facebook">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="text-light mx-2 bi bi-facebook" viewBox="0 0 16 16">
+                    <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
+                  </svg>
+                </a>
+                <a href="https://www.facebook.com/ConnectingThroughCharity/?_rdr" target="_blank" class="facebook">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="text-light mx-2 bi bi-facebook" viewBox="0 0 16 16">
+                    <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          </div>
+          <div class="col text-light">
+            <div>&copy; copyright 2024</div>
+          </div>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
