--- a/tests/MIDTERM/faq.html
+++ b/tests/MIDTERM/faq.html
@@ -45,7 +45,62 @@
       </nav>
     </header>
     <main>
+      <div id="main-title">
+        <h1>Frequently Asked Questions</h1>
+      </div>
 
+      <div class="accordion accordion-flush" id="faq-accordion">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+              Here would be question #1
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#faq-accordion">
+            <div class="accordion-body">Here would be the answer to question #1 and any supporting links and/or pictures.</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              Here would be question #2
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#faq-accordion">
+            <div class="accordion-body">Here would be the answer to question #2 and any supporting links and/or pictures.</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+              Here would be question #3
+            </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#faq-accordion">
+            <div class="accordion-body">Here would be the answer to question #3 and any supporting links and/or pictures.</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+              and so on...
+            </button>
+          </h2>
+          <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#faq-accordion">
+            <div class="accordion-body">Here would be the answer to question #4 and any supporting links and/or pictures.</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+              and so on...
+            </button>
+          </h2>
+          <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#faq-accordion">
+            <div class="accordion-body">Here would be the answer to question #5 and any supporting links and/or pictures.</div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer>
