--- a/tests/MIDTERM/contact.html
+++ b/tests/MIDTERM/contact.html
@@ -12,7 +12,84 @@
     <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header id="header">
+      <nav class="navbar navbar-expand-lg fixed-top bg-custom">
+        <div class="container-fluid navbar-container">
+          <a class="navbar-brand" href="index.html"><img src="images/connecting_through_charity_mockup_draftv3.icon30x30.png" alt="logo"> Connecting Through Charity</a>
+          <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="gallery.html">GALLERY</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="donations.html">DONATIONS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="contact.html">CONTACT</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="faq.html">FAQ</a>
+              </li>
+            </ul>
+            <div class="nav-item">
+              <a class="nav-link bg-primary text-light border border-primary border-2 p-2" href="signup-calendar.html" >SIGN UP</a>
+            </div>
+            <div class="nav-item">
+              <a class="nav-link border border-primary border-2 p-2" href="donations.html" >DONATE</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main>
+      
+    </main>
+    <footer class="bg-primary">
+      <div class="container text-center w-100">
+        <div class="row flex-wrap align-items-start">
+          <div class="col col-md-6">
+            <div class="footer-content-header">Donate</div>
+              <a href="donations.html">
+                <ul class="footer-content d-flex justify-content-evenly">
+                  <li class="p-1">Cash</li>
+                  <li class="p-1">Paypal</li>
+                  <li class="p-1">Venmo</li>
+                  <li class="p-1">Other</li>
+                </ul>
+              </a>
+          </div>
+          <div class="col col-md-6">
+            <div class="footer-content-header">Get in touch</div>
+            <ul class="footer-content d-flex flex-wrap justify-content-evenly">
+              <li class="p-1">Contact us</li>
+              <li class="p-1">Join us</li>
+            </ul>
+          </div>
+          <div class="row">
+          <div class="col col-md-6">
+            <div class="copyright">&copy; copyright 2024</div>
+          </div>
+          <div class="col col-md-6">
+            <div>
+              <a href="https://www.facebook.com/ConnectingThroughCharity/?_rdr" target="_blank" class="facebook">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="text-light mx-2 bi bi-facebook" viewBox="0 0 16 16">
+                  <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
+                </svg>
+              </a>
+              <a href="#" target="_blank">
+                <img src="images/NextdoorLogo_Lime.png" width="32px" alt="Nextdoor">
+              </a>
+            </div>
+          </div>
+        </div>
+          </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
