--- a/tests/MIDTERM/donations.html
+++ b/tests/MIDTERM/donations.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>CTC-Donations</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="styles/site.css" rel="stylesheet" type="text/css">
@@ -12,7 +13,158 @@
     <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header id="header">
+      <nav class="navbar navbar-expand-lg fixed-top bg-custom">
+        <div class="container-fluid navbar-container">
+          <a class="navbar-brand" href="index.html"><img src="images/connecting_through_charity_mockup_draftv3.icon30x30.png" alt="logo"> Connecting Through Charity</a>
+          <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="gallery.html">GALLERY</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="donations.html">DONATIONS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">CONTACT</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="faq.html">FAQ</a>
+              </li>
+            </ul>
+            <div class="nav-item">
+              <a class="nav-link bg-primary text-light border border-primary border-2 p-2" href="signup-calendar.html" >SIGN UP</a>
+            </div>
+            <div class="nav-item">
+              <a class="nav-link border border-primary border-2 p-2" href="donations.html" >DONATE</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <div id="donation-hero" class="px-4 py-5 overlay text-center" style="background-image: url(images/pexels-liza-summer-6347730.jpg); background-repeat: no-repeat; background-position: center; background-position-y: center; background-size: 200vh;">
+        <div class="hero-content d-flex flex-wrap align-items-center justify-content-evenly text-center w-100 h-100">
+        </div>
+      </div>
+      <section class="goal-section">
+        <div class="section-heading">
+          Goals:
+        </div>
+        <div class="section-content p-4">
+         <div class="section-item">
+          <div class="item-title">Thanksgiving 2024</div>
+          <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 80%"></div>
+          </div>
+         </div>
+         <div class="section-item">
+          <div class="item-title">Adopt a Teacher 2025</div>
+          <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 20%"></div>
+          </div>
+         </div>
+         <div class="section-item">
+          <div class="item-title">Blessing Bags Made This Year 2024</div>
+          <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%"></div>
+          </div>
+         </div>
+        </div>
+      </section>
+      <section class="how-help-section">
+        <div class="section-heading">How You Can Help:</div>
+        <div class="px-4 pb-3 row row-cols-1 row-cols-md-2 g-4">
+          <div class="col col-xl-3">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">Cash</h5>
+                <p class="card-text">Lorem ipsum odor amet, consectetuer adipiscing elit. Tincidunt dis parturient pulvinar varius, ad eu bibendum. Interdum finibus netus ornare enim sem. Tristique est vivamus molestie laoreet semper sed habitasse condimentum sagittis. Erat conubia justo neque maximus lobortis dis.<br> Posuere fermentum elementum turpis ipsum id curae a faucibus.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col col-xl-3">
+            <div class="card h-100">
+              <img src="images/paypal copy.png" class="card-img-top" alt="...">
+              <div class="card-body text-center">
+                <form action="https://www.paypal.com/donate" method="post" target="_top">
+                  <input type="hidden" name="business" value="T5KQ5ECGFAEW2" />
+                  <input type="hidden" name="no_recurring" value="0" />
+                  <input type="hidden" name="item_name" value="This is for previewing on websites" />
+                  <input type="hidden" name="currency_code" value="USD" />
+                  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                  <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+                  </form>
+              </div>
+            </div>
+          </div>
+          <div class="col col-xl-3">
+            <div class="card h-100">
+              <img src="images/venmo copy.png" class="p-3 card-img-top" alt="...">
+              <div class="card-body text-center d-flex flex-column justify-content-between">
+                <p class="card-text">Send on Venmo</p>
+                <button class="btn btn-primary"><a class="card-link text-light " href="https://www.venmo.com/u/JonReyBau">@JonReyBau</a></button>
+              </div>
+            </div>
+          </div>
+          <div class="col col-xl-3">
+            <div class="card h-100">
+              <div class="card-body d-flex flex-column justify-content-between">
+                <h5 class="card-title">Other</h5>
+                <p class="card-text">Get in contact with us! Let us know what you have to offer and we can discuss further.</p>
+                <button class="btn btn-primary"><a class="card-link text-light " href="contact.html">Contact Us</a></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="bg-primary">
+      <div class="container text-center w-100">
+        <div class="row flex-wrap align-items-start">
+          <div class="col col-md-6">
+            <div class="footer-content-header">Donate</div>
+              <a href="donations.html">
+                <ul class="footer-content d-flex justify-content-evenly">
+                  <li class="p-1">Cash</li>
+                  <li class="p-1">Paypal</li>
+                  <li class="p-1">Venmo</li>
+                  <li class="p-1">Other</li>
+                </ul>
+              </a>
+          </div>
+          <div class="col col-md-6">
+            <div class="footer-content-header">Get in touch</div>
+            <ul class="footer-content d-flex flex-wrap justify-content-evenly">
+              <li class="p-1">Contact us</li>
+              <li class="p-1">Join us</li>
+            </ul>
+          </div>
+          <div class="row">
+          <div class="col col-md-6">
+            <div class="copyright">&copy; copyright 2024</div>
+          </div>
+          <div class="col col-md-6">
+            <div>
+              <a href="https://www.facebook.com/ConnectingThroughCharity/?_rdr" target="_blank" class="facebook">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="text-light mx-2 bi bi-facebook" viewBox="0 0 16 16">
+                  <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
+                </svg>
+              </a>
+              <a href="#" target="_blank">
+                <img src="images/NextdoorLogo_Lime.png" width="32px" alt="Nextdoor">
+              </a>
+            </div>
+          </div>
+        </div>
+          </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
