--- a/tests/MIDTERM/index.html
+++ b/tests/MIDTERM/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Connecting Though Charity</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script defer src="scripts/scripts.js"></script>
     <link href="styles/site.css" rel="stylesheet" type="text/css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -17,8 +19,8 @@
   <body>
     <header id="header">
       <nav class="navbar navbar-expand-lg fixed-top bg-custom">
-        <div class="container-fluid">
-          <a class="navbar-brand active" href="index.html"><img src="images/connecting_through_charity_mockup_draftv3.icon30x30.png" alt="logo"> Connecting Through Charity</a>
+        <div class="container-fluid navbar-container">
+          <a class="navbar-brand active" aria-current="page" href="index.html"><img src="images/connecting_through_charity_mockup_draftv3.icon30x30.png" alt="logo"> Connecting Through Charity</a>
           <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span></span>
             <span></span>
@@ -60,12 +62,12 @@
             </div>
             <div class="social-links text-center">
               <a href="https://www.facebook.com/ConnectingThroughCharity/?_rdr" target="_blank" class="social-link facebook">
-                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="mx-2 bg-light border border-1 rounded-5 bi bi-facebook" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="mx-2 bg-light border rounded-5 bi bi-facebook" viewBox="0 0 16 16">
                   <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
                 </svg>
               </a>
-              <a href="#" target="_blank" class="nextdoor social-links">
-                <img src="images/icons8-nextdoor-48.png" alt="Nextdoor">
+              <a href="#" target="_blank" class="nextdoor social-link">
+                <img src="images/NextdoorLogo_Lime.png" width="32px" alt="Nextdoor">
               </a>
             </div>
           </div>
@@ -81,81 +83,138 @@
           </div>
       </section>
 
-      <section class="about-us">
+      <section class="about-us d-flex flex-column">
         <div class="section-heading">About Us:</div>
+
+        <div class="section-content d-flex flex-wrap">
+          <div class="about-para px-4 px-xxl-5 py-2 text-center">Lorem ipsum odor amet, consectetuer adipiscing elit. Phasellus proin massa nostra sit penatibus, etiam ut est arcu. Integer egestas quam efficitur justo volutpat montes. Tempus amet sapien montes aliquet eros arcu sodales cursus neque. Imperdiet faucibus per, ante malesuada pretium aliquam. Blandit feugiat mauris velit mi finibus class nulla erat.<br><br>
+            <img loading="lazy" src="images/connecting_through_charity_mockup_draftv3.no_outline (1).png" class="hidden-logo my-xxl-5" width="200" height="200" alt="logo">
+          </div>
+          <div id="about-carousel" class="carousel slide px-3 px-xxl-5 py-2">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#about-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#about-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#about-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="images/pexels-cottonbro-6591154.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="images/pexels-rdne-6646900.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="images/pexels-rdne-6646916.jpg"  class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#about-carousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#about-carousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
       </section>
-      <section class="projects">
-        <div class="section-heading">Things we have done:</div>
-          <div class="section-body">Make Blessing Bags for the homeless, provide Christmas gifts to families in need within our local school districts, providing Easter Baskets to families for their children, we adopted a teacher and her classroom this year for the first time, we have provided the food for families to make a Thanksgiving dinner. We are continuously adding new projects.</div>
+      <section class="projects text-center text-md-start">
+        <div class="section-heading text-start">Things We Do and Have Done:</div>
+          <div class="container text-center">
+            <div class="row">
+              <div class="project-content col-xs-2 col-md-4 col-xl p-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-backpack" viewBox="0 0 16 16">
+                  <path d="M4.04 7.43a4 4 0 0 1 7.92 0 .5.5 0 1 1-.99.14 3 3 0 0 0-5.94 0 .5.5 0 1 1-.99-.14M4 9.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5zm1 .5v3h6v-3h-1v.5a.5.5 0 0 1-1 0V10z"/>
+                  <path d="M6 2.341V2a2 2 0 1 1 4 0v.341c2.33.824 4 3.047 4 5.659v5.5a2.5 2.5 0 0 1-2.5 2.5h-7A2.5 2.5 0 0 1 2 13.5V8a6 6 0 0 1 4-5.659M7 2v.083a6 6 0 0 1 2 0V2a1 1 0 0 0-2 0m1 1a5 5 0 0 0-5 5v5.5A1.5 1.5 0 0 0 4.5 15h7a1.5 1.5 0 0 0 1.5-1.5V8a5 5 0 0 0-5-5"/>
+                </svg><br>
+                Make Blessing Bags for the homeless
+              </div>
+              <div class="project-content col-xs-2 col-md-4 col-xl p-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-gift" viewBox="0 0 16 16">
+                  <path d="M3 2.5a2.5 2.5 0 0 1 5 0 2.5 2.5 0 0 1 5 0v.006c0 .07 0 .27-.038.494H15a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a1.5 1.5 0 0 1-1.5 1.5h-11A1.5 1.5 0 0 1 1 14.5V7a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h2.038A3 3 0 0 1 3 2.506zm1.068.5H7v-.5a1.5 1.5 0 1 0-3 0c0 .085.002.274.045.43zM9 3h2.932l.023-.07c.043-.156.045-.345.045-.43a1.5 1.5 0 0 0-3 0zM1 4v2h6V4zm8 0v2h6V4zm5 3H9v8h4.5a.5.5 0 0 0 .5-.5zm-7 8V7H2v7.5a.5.5 0 0 0 .5.5z"/>
+                </svg><br>
+                Provide Christmas gifts to families in need within out school districts</div>
+              <div class="project-content col-xs-2 col-md-4 col-xl p-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-egg" viewBox="0 0 16 16">
+                  <path d="M8 15a5 5 0 0 1-5-5c0-1.956.69-4.286 1.742-6.12.524-.913 1.112-1.658 1.704-2.164C7.044 1.206 7.572 1 8 1s.956.206 1.554.716c.592.506 1.18 1.251 1.704 2.164C12.31 5.714 13 8.044 13 10a5 5 0 0 1-5 5m0 1a6 6 0 0 0 6-6c0-4.314-3-10-6-10S2 5.686 2 10a6 6 0 0 0 6 6"/>
+                </svg><br>
+                Provide Easter Baskets to families for their children</div>
+              <div class="project-content col-xs-2 col-md-4 col-xl p-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                  <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                </svg><br>
+                Provide food for families to make Thanksgiving dinner
+              </div>
+              <div class="project-content ol-xs-2 col-md-4 col-xl p-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-mortarboard" viewBox="0 0 16 16">
+                  <path d="M8.211 2.047a.5.5 0 0 0-.422 0l-7.5 3.5a.5.5 0 0 0 .025.917l7.5 3a.5.5 0 0 0 .372 0L14 7.14V13a1 1 0 0 0-1 1v2h3v-2a1 1 0 0 0-1-1V6.739l.686-.275a.5.5 0 0 0 .025-.917zM8 8.46 1.758 5.965 8 3.052l6.242 2.913z"/>
+                  <path d="M4.176 9.032a.5.5 0 0 0-.656.327l-.5 1.7a.5.5 0 0 0 .294.605l4.5 1.8a.5.5 0 0 0 .372 0l4.5-1.8a.5.5 0 0 0 .294-.605l-.5-1.7a.5.5 0 0 0-.656-.327L8 10.466zm-.068 1.873.22-.748 3.496 1.311a.5.5 0 0 0 .352 0l3.496-1.311.22.748L8 12.46z"/>
+                </svg><br>
+                Adopted a teacher and her classroom this year for the first time</div>
+              <div class="project-content col-xs-2 col-md-4 col-xl p-2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-clipboard2-plus" viewBox="0 0 16 16">
+                  <path d="M9.5 0a.5.5 0 0 1 .5.5.5.5 0 0 0 .5.5.5.5 0 0 1 .5.5V2a.5.5 0 0 1-.5.5h-5A.5.5 0 0 1 5 2v-.5a.5.5 0 0 1 .5-.5.5.5 0 0 0 .5-.5.5.5 0 0 1 .5-.5z"/>
+                  <path d="M3 2.5a.5.5 0 0 1 .5-.5H4a.5.5 0 0 0 0-1h-.5A1.5 1.5 0 0 0 2 2.5v12A1.5 1.5 0 0 0 3.5 16h9a1.5 1.5 0 0 0 1.5-1.5v-12A1.5 1.5 0 0 0 12.5 1H12a.5.5 0 0 0 0 1h.5a.5.5 0 0 1 .5.5v12a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5z"/>
+                  <path d="M8.5 6.5a.5.5 0 0 0-1 0V8H6a.5.5 0 0 0 0 1h1.5v1.5a.5.5 0 0 0 1 0V9H10a.5.5 0 0 0 0-1H8.5z"/>
+                </svg><br>
+                We are always adding new projects!</div>
+            </div>
+            </div>
           <div class="section-link"><a class="btn btn-primary" href="gallery.html">See what we've done</a></div>
       </section>
-
-      <div id="about-carousel" class="carousel slide">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#about-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#about-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#about-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="images/pexels-cottonbro-6591154.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="images/pexels-rdne-6646900.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="images/pexels-rdne-6646916.jpg"  class="d-block w-100" alt="...">
+      <div class="toast position-fixed" data-bs-autohide="false" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-body">
+          Thank you for visiting our page! Right now we are in desperate need of volunteers and was hoping you could join us. Click 'Take Action' and see if there is a day we can use you.
+          <div class="mt-2 pt-2 border-top">
+            <button type="button" class="btn btn-primary btn-sm"><a class="text-light" href="signup-calendar.html">Take Action!</a></button>
+            <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="toast">Close</button>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#about-carousel" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#about-carousel" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
+
     </main>
 
     <footer class="bg-primary">
       <div class="container text-center w-100">
-        <div class="row flex-wrap align-items-center">
-          <div class="col col-md-4">
+        <div class="row flex-wrap align-items-start">
+          <div class="col col-md-6">
             <div class="footer-content-header">Donate</div>
-            <a href="donations.html">
-              <ul class="footer-content">
-                <li>Cash donations</li>
-                <li>Paypal</li>
-                <li>Venmo</li>
-                <li>Other</li>
-              </ul>
-            </a>
+              <a href="donations.html">
+                <ul class="footer-content d-flex justify-content-evenly">
+                  <li class="p-1">Cash</li>
+                  <li class="p-1">Paypal</li>
+                  <li class="p-1">Venmo</li>
+                  <li class="p-1">Other</li>
+                </ul>
+              </a>
           </div>
-          <div class="col col-md-4">
+          <div class="col col-md-6">
             <div class="footer-content-header">Get in touch</div>
-            <ul class="footer-content">
-              <li>Contact us</li>
-              <li>Join us</li>
-              <li>
-                <a href="https://www.facebook.com/ConnectingThroughCharity/?_rdr" target="_blank" class="facebook">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="text-dark mx-2 bi bi-facebook" viewBox="0 0 16 16">
-                    <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
-                  </svg>
-                </a>
-                <a href="#" target="_blank" class="nextdoor">
-                  <img src="images/icons8-nextdoor-48.png" alt="Nextdoor">
-                </a>
-              </li>
+            <ul class="footer-content d-flex flex-wrap justify-content-evenly">
+              <li class="p-1">Contact us</li>
+              <li class="p-1">Join us</li>
             </ul>
           </div>
-          <div class="col col-md-4">
+          <div class="row">
+          <div class="col col-md-6">
             <div class="copyright">&copy; copyright 2024</div>
-            <a target="_blank" href="https://icons8.com/icon/xjPYO6v2PV57/nextdoor">Nextdoor</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
           </div>
+          <div class="col col-md-6">
+            <div>
+              <a href="https://www.facebook.com/ConnectingThroughCharity/?_rdr" target="_blank" class="facebook">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="text-light mx-2 bi bi-facebook" viewBox="0 0 16 16">
+                  <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
+                </svg>
+              </a>
+              <a href="#" target="_blank">
+                <img src="images/NextdoorLogo_Lime.png" width="32px" alt="Nextdoor">
+              </a>
+            </div>
+          </div>
+        </div>
           </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+   
   </body>
 </html>
